# my-fractal-ray-tracer

./: .gitignore  CMakeLists.txt  compile.sh  main.cpp
include/: .ray.h.swp  camera.h  dda.h  frac_color.h  light.h  mandelbox.h  mandelbulb.h  octree.h  progress_ui.h  ray.h  render.h  render_menu.h  save_png.h  select_menu.h  struct.h  vec3.h
src/: camera.cpp  dda.cpp  frac_color.cpp  light.cpp  main.cpp  mandelbox.cpp  mandelbulb.cpp  ray.cpp  render_menu.cpp  save_png.cpp  select_menu.cpp  vec3.cpp
